--- a/BigML/.gitattributes
+++ b/BigML/.gitattributes
@@ -5,3 +5,4 @@ BigML/data/datasets/MNIST_deepnet/MNIST_deepnet_test.csv
 BigML/data/datasets/MNIST_deepnet/MNIST_deepnet_train.csv
 BigML/data/predict_result/MNIST/MNIST_results
 BigML/data/predict_result/MNIST_deepnet/MNIST_deepnet_results
+MNIST_test.csv filter=lfs diff=lfs merge=lfs -text
